# Scholar_RAG

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.local  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: default.yaml
configs/experiments/: dense_only.yaml  no_rerank.yaml
data/: citations.duckdb
data/eval/: golden_set.json
deploy/: HF_SPACES_DEPLOY.md
docs/: DESIGN_DECISIONS.md  PIPELINE_WALKTHROUGH.md
modal/: ollama_gpu.py  scholar_rag_modal.py
notebooks/: README.md  ScholarRAG_Colab_Ingest.ipynb  _build_colab_nb.py
scripts/: backfill_citations.py  diagnose_retrieval.py  enable_quantization.py
src/scholar_rag/: __init__.py  config.py
src/scholar_rag/api/: main.py
src/scholar_rag/api/static/: index.html
src/scholar_rag/embed/: bge_m3.py  embedder.py
src/scholar_rag/eval/: ablation.py  ragas_eval.py  retrieval_metrics.py  run_eval.py
src/scholar_rag/generate/: agent.py  cited_generator.py  llm.py  prompts.py
src/scholar_rag/ingest/: arxiv_crawler.py  citation_enrich.py  pipeline.py
src/scholar_rag/retrieve/: crag.py  engine.py  graph_rerank.py  hybrid_rrf.py  hyde.py  multi_query.py  rerank.py
src/scholar_rag/store/: graph_store.py  qdrant_store.py
src/scholar_rag/transform/: chunkers.py  contextual_headers.py  parse_grobid.py  parse_nougat.py  propositions.py
src/scholar_rag/ui/: app.py
tests/: test_chunkers.py  test_citation_enforcement.py  test_hybrid.py
