[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholar-rag"
version = "0.1.0"
description = "Production-grade RAG pipeline over arXiv papers — ScholarRAG"
requires-python = ">=3.10"
dependencies = [
    # Core orchestration
    "llama-index>=0.10.0",
    "llama-index-vector-stores-qdrant>=0.2.0",
    "llama-index-embeddings-huggingface>=0.2.0",
    "llama-index-llms-ollama>=0.1.0",

    # Document parsing
    "pymupdf>=1.24.0",
    "unstructured[pdf]>=0.14.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",

    # Embeddings / reranking
    "FlagEmbedding>=1.2.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.1.0",

    # Vector store
    "qdrant-client>=1.9.0",

    # Sparse / lexical
    "rank-bm25>=0.2.2",

    # Citation graph / analytics
    "duckdb>=0.10.0",

    # LLM (local via Ollama HTTP)
    "ollama>=0.2.0",

    # Evaluation — the RAGAS metric suite is implemented natively (Groq-judged),
    # so no ragas / langchain / datasets dependency is required.

    # Serving
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "streamlit>=1.35.0",
    "pydantic>=2.7.0",

    # Experiment tracking
    "mlflow>=2.13.0",

    # Config / utils
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "loguru>=0.7.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
